test: added tests for aggregations pipeline

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=FlightBookingSysWebFlux
 server.port=8080
 spring.mongodb.uri=mongodb://localhost:27017/flightBooking
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
