--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
     </executions>
 </plugin>
 <plugin>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.11.0.3922</version>
+</plugin>
+
+<plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <executions>
@@ -157,6 +163,7 @@
           </execution>
         </executions>
       </plugin>
+      
 
 		</plugins>   
 	</build>
